auth middleware and auth error handling
